trying to fix scrollbar issue

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -6,6 +6,10 @@
 @import "partials/variables";
 @import "partials/mixin";
 
+::-webkit-scrollbar { 
+  display: none; 
+}
+
 body { 
   background-color: $dairy-cream
 }
